# lmwa

./: .gitignore  README.md  config.py  example.env  install.ps1  install.sh  main.py  pyproject.toml  server.py
app/: db.py  utils.py
app/books/: __init__.py  base.py  forms.py  models.py
app/books/views/: add_book.py  add_stock.py  book.py  books.py  delete_book.py  delete_stock.py  edit_book.py  import_books.py  stock.py
app/members/: __init__.py  base.py  forms.py  models.py
app/members/views/: add_member.py  delete_member.py  edit_member.py  member.py  members.py
app/static/css/: style.css
app/templates/: base.html
app/templates/books/: add_book.html  add_stock.html  book.html  books.html  edit_book.html  import.html  stock.html
app/templates/members/: add_member.html  edit_member.html  member.html  members.html
app/templates/transactions/: issue_book.html  return_book.html  transaction.html  transactions.html
app/transactions/: __init__.py  base.py  forms.py  models.py
app/transactions/views/: collect_rent.py  issue_book.py  return_book.py  transaction.py  transactions.py
migrations/versions/: 8f042a1d8329_bookstock_created_on_column_added.py  ab66ca88a19c_initial_migration.py  d35efa8e2301_language_code_string_size_increased_to_.py
